# bw24

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPETITOR-SETUP.md  CONTRIBUTING.md  Cargo.toml  HANDOVER-E4B.md  HANDOVER.md  LICENSE  PHASE1-HYBRID.md  QUANT-GEMM-DECISION.md  README.md  ROADMAP.md  SECURITY.md
.claude/workflows/: bw24-pp-and-35b-closure.js
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  hardware-validation.md
.github/workflows/: ci.yml  release.yml
agent-knowledge/: AGENTS.md  CLAUDE.md  readme-technical-inference-repos.md
agent-knowledge/resources/: readme-technical-inference-repos-sources.json
crates/bw24-engine/: Cargo.toml  build.rs
crates/bw24-engine/cu/: cutlass_fp4_sm120.cu  fattn_vendor.cu  flash_attn.cu  fp8_prefill.cu  hybrid.cu  kernels.cu  llama_mmq_nvfp4.cu  llama_mmq_q45k.cu  mma_tile.cuh  mmq_fp4.cu  mmq_fp4_stub.cu  mmq_iq_experts.cu  mmq_nvfp4_f8f4.cu  mmq_nvfp4_w4a8.cu  mmq_nvfp4_w4a8_stub.cu  mmq_q45k.cu  mmq_q4_0.cu  mmq_q8_0.cu  moe_router.cu  qmatvec.cu  qmatvec_gemm.cu  spec_sample.cu
crates/bw24-engine/src/: cache.rs  cpu_experts.rs  cutlass_ffi.rs  decode.rs  dflash.rs  eagle.rs  forward.rs  fp8_ffi.rs  gemma_spec.rs  graph_update.rs  hybrid.rs  hybrid_forward.rs  lib.rs  mmq_ffi.rs  model.rs  moe_cache.rs  round_stream.rs  sampler.rs  spec.rs  spill.rs  spill_pread.rs
crates/bw24-gguf/: Cargo.toml
crates/bw24-probe/: Cargo.toml  build.rs
crates/bw24-runtime/: Cargo.toml
crates/bw24-runtime/src/: lib.rs
crates/bw24-server/: Cargo.toml
crates/bw24-server/src/: main.rs  worker.rs
crates/bw24-tokenizer/: Cargo.toml
docs/: COMPETITOR-SETUP.md  DRAFT-REGIME.md  FLAGS.md  HY3-SPILL.md  RELEASING.md
docs/archive/: ROADMAP-2026-06.md
docs/decisions/: BEST-OF-ALL-WORLDS.md  FORMAT-DECISION.md  SAFETENSORS-DECISION.md
probe/: arch_probe.cu  bw_bench.cu  epilogue_hoist_equiv.cu  fp4_4x_final.cu  fp4_layout.cu  fp8_lt_prefill.cu  fp8_lt_scale_probe.cu  fp8_vec16_probe.cu  int8_swizzle_aload.cu  kv_align_probe.cu  lowbit_peak.cu  mixed_f8f4_probe  mixed_f8f4_probe.cu  mma_probe.cu  mxf4_transient_repack.cu  pdl_probe.cu  q4k_transient_decode.cu  slab_repack_expert.cu  tc_peak.cu
research/: .upstream-sweep-since  BW24-BUILD-MAP.md  INFERENCE-FEATURE-MAP.md  SOTA-ADOPTION-2026-07.md  SOTA-SWEEP-2026-07-13.md  benchmarks.md  claim-verification-report.md  current-model-targets.md  deepk-probes.sh  gemma4-family-brief.md  gemma4-nvfp4-port-scope.md  gemma4-qat-vs-nvfp4.md  greedy-degeneration-protocol-survey.md  hy3-phase2-plan.md  hy3-reap50-port-scope.md  hy3-reap50-tensor-inventory.tsv  prefill-mxf8f6f4-design.md  raw-hybrid-research.json  raw-workflow-output.json  sampled-spec-impl-map.md  sm120-empirical-capabilities.md  upstream-sweeps.md
research/basics/: ATTENTION-PLAN.md  BEAT-CEILING-27B-Q4K.md  CUDA-GRAPH-PLAN.md  CUTLASS-FP4-INTEGRATION.md  DECODE-GAP-PLAN.md  DECODE-GEMV-PLAN.md  DECODE-GEMV-SOL-PLAN.md  EAGLE-PLAN.md  FA-FLOOR-PLAN.md  FA-MATCH-THEN-EXCEED.md  FA-PREFILL-OVERLAP-DESIGN.md  FA34-PLAN.md  FP4-SMEM-PLAN.md  FP8-GEMM-PLAN.md  FUSION-ROADMAP.md  GEMM-PLAN.md  GEMM-PREDECODE-PLAN.md  GEMM-TILE-PLAN.md  GEMM-TUNE-PLAN.md  GRAPH-PLAN.md  (+9 more)
tools/: acceptance_battery.sh  acceptance_battery.shk  acceptance_delta.py  acceptance_parse.py  agent_loop_acceptance.sh  agent_loop_acceptance.shk  analyze_hy3_route_transitions.py  audit_hy3_healed_routing.py  bench.sh  bench.shk  bench_cpu_expert.cpp  bench_cpu_expert_trace.cpp  bench_mapped_qmatvec.cu  bench_vulkan_expert.cpp  build_confidence_tier_plan.py  build_cpu_expert_companion.sh  build_dequant_ref.sh  build_dequant_ref.shk  build_dual_nvme_expert_view.py  build_exact_budget_prune_plan.py  build_expert_mirror_map.py  build_expert_tier_plan.py  build_hy3_coverage_complement_scores.py  build_hy3_delta_restore_plan.py  build_hy3_late_restore_plan.py  build_hy3_layer_constraints.py  build_hy3_quant_sensitivity.py  build_hy3_reap_scores.py  build_hy3_repack_importance.py  build_hy3_smart_budget_plan.py  bw24_cpu_experts.cpp  bw24_iq3s_grid.inc  changelog.sh  changelog.shk  dflash_oracle.py  export_hy3_router_overrides.py  extract_hy3_plan_from_artifact_manifest.py  extract_mtp_draft.py  ggml_dequant_ref  ggml_dequant_ref.cpp  (+32 more)
(+640 files in other folders)
