[package]
name = "bw24-engine"
version = "0.0.0"
edition = "2024"

[dependencies]
bw24-gguf = { path = "../bw24-gguf" }
bw24-runtime = { path = "../bw24-runtime" }
bw24-tokenizer = { path = "../bw24-tokenizer" }
cudarc = { version = "0.19", default-features = false, features = ["std", "cuda-13010", "dynamic-loading", "driver", "cublas", "cublaslt", "nvrtc"] }

[[bin]]
name = "kernel-check"
path = "src/bin/kernel_check.rs"

[[bin]]
name = "run-dense"
path = "src/bin/run_dense.rs"

[[bin]]
name = "run-hybrid"
path = "src/bin/run_hybrid.rs"

[[bin]]
name = "run-gen"
path = "src/bin/run_gen.rs"

[[bin]]
name = "run-spec"
path = "src/bin/run_spec.rs"
