[package]
name = "bw24-engine"
version = "0.0.0"
edition = "2024"

[dependencies]
bw24-gguf = { path = "../bw24-gguf" }
bw24-runtime = { path = "../bw24-runtime" }
bw24-tokenizer = { path = "../bw24-tokenizer" }
cudarc = { version = "0.19", default-features = false, features = ["std", "cuda-13010", "dynamic-loading", "driver", "cublas", "cublaslt", "nvrtc"] }
memmap2 = "0.9"

[[bin]]
name = "gemma-gate"
path = "src/bin/gemma_gate.rs"

[[bin]]
name = "kernel-check"
path = "src/bin/kernel_check.rs"

[[bin]]
name = "mvq-msweep"
path = "src/bin/mvq_msweep.rs"

[[bin]]
name = "fa-sanitize"
path = "src/bin/fa_sanitize.rs"

[[bin]]
name = "kv-fmt-bench"
path = "src/bin/kv_fmt_bench.rs"

[[bin]]
name = "fa-hd128-check"
path = "src/bin/fa_hd128_check.rs"

[[bin]]
name = "quant-kv-f32-check"
path = "src/bin/quant_kv_f32_check.rs"

[[bin]]
name = "run-dense"
path = "src/bin/run_dense.rs"

[[bin]]
name = "run-hybrid"
path = "src/bin/run_hybrid.rs"

[[bin]]
name = "run-safetensors"
path = "src/bin/run_safetensors.rs"

[[bin]]
name = "st-vs-gguf"
path = "src/bin/st_vs_gguf.rs"

[[bin]]
name = "run-gen"
path = "src/bin/run_gen.rs"

[[bin]]
name = "run-spec"
path = "src/bin/run_spec.rs"

[[bin]]
name = "replay-acceptance"
path = "src/bin/replay_acceptance.rs"

[[bin]]
name = "run-eagle"
path = "src/bin/run_eagle.rs"


[[bin]]
name = "decode-bench"
path = "src/bin/decode_bench.rs"

[[bin]]
name = "argmax-gate"
path = "src/bin/argmax_gate.rs"

[[bin]]
name = "moe-devq8-check"
path = "src/bin/moe_devq8_check.rs"

[[bin]]
name = "decode-dc-gate"
path = "src/bin/decode_dc_gate.rs"

[[bin]]
name = "graph-decode-gate"
path = "src/bin/graph_decode_gate.rs"

[[bin]]
name = "cutlass-smoke"
path = "src/bin/cutlass_smoke.rs"

[[bin]]
name = "gdn-bench"
path = "src/bin/gdn_bench.rs"

[[bin]]
name = "verify-probe"
path = "src/bin/verify_probe.rs"

[[bin]]
name = "verify-mscale"
path = "src/bin/verify_mscale.rs"

[[bin]]
name = "depth-profile"
path = "src/bin/depth_profile.rs"

[[bin]]
name = "decode-window-profile"
path = "src/bin/decode_window_profile.rs"

[[bin]]
name = "session-gate"
path = "src/bin/session_gate.rs"

[[bin]]
name = "session-bench"
path = "src/bin/session_bench.rs"

[[bin]]
name = "fa-ab-bench"
path = "src/bin/fa_ab_bench.rs"
