[package]
name = "bw24-server"
version = "0.0.0"
edition = "2024"

# BASE-4 (BW24-BUILD-MAP §BASE-4): HTTP server + step-interleave scheduler.
# The engine lib stays CUDA-only and SYNC; this crate is the async-only seam.
# A single dedicated GPU worker thread owns the Engine + all HybridModels
# (CUDA context is thread-affine); axum handlers talk to it over channels.

[dependencies]
bw24-engine = { path = "../bw24-engine" }
bw24-gguf = { path = "../bw24-gguf" }
bw24-tokenizer = { path = "../bw24-tokenizer" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
futures-core = "0.3"

[[bin]]
name = "bw24-server"
path = "src/main.rs"
